--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ kotlin.code.style=official
 android.useAndroidX=true
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
+
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
