--- a/lib-semantic-api-cemantix/src/androidMain/AndroidManifest.xml
+++ b/lib-semantic-api-cemantix/src/androidMain/AndroidManifest.xml
@@ -1,2 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="fr.outadoc.semantique.api.cemantix"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="fr.outadoc.semantique.api.cemantix">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+</manifest>
