--- a/app-android/src/main/AndroidManifest.xml
+++ b/app-android/src/main/AndroidManifest.xml
@@ -5,14 +5,14 @@
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
+        android:label="Sémantique"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.App.Starting">
 
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="Sémantique">
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
