--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,9 @@
-name: Release
+name: Release new version
 
 on:
   push:
     tags:
       - 'v*'
-  pull_request:
-    branches:
-      - '*'
 
 jobs:
   build-linux:
@@ -28,7 +25,7 @@ jobs:
       - name: Build Android app
         run: ./gradlew app-android:assembleRelease
 
-      - name: Sign app APK
+      - name: Sign Android app
         uses: Tlaster/android-sign@v1.2.2
         with:
           releaseDirectory: app-android/build/outputs/apk/release
@@ -98,3 +95,20 @@ jobs:
           if-no-files-found: error
           path: |
             app-desktop/build/compose/binaries/main/*/*.msi
+
+  upload-release:
+    name: Upload
+    needs:
+      - build-linux
+      - build-macos
+      - build-windows
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+
+      - uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          generateReleaseNotes: true
+          artifacts: "**"
