Revert "Re-revert"
This reverts commit 160abaa716060965c7f6a2dadb76948572ef2d81.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,9 @@
-name: Release
+name: Release new version
 
 on:
   push:
     tags:
       - 'v*'
-  pull_request:
-    branches:
-      - '*'
 
 jobs:
   build-linux:
@@ -97,3 +94,20 @@ jobs:
           if-no-files-found: error
           path: |
             app-desktop/build/compose/binaries/main/*/*.msi
+
+  upload-release:
+    name: Upload
+    needs:
+      - build-linux
+      - build-macos
+      - build-windows
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+
+      - uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          generateReleaseNotes: true
+          artifacts: "**"
